--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Ficha Técnica • CMV Profissional</title>
+<title>Ficha Técnica • CMV Profissional (DEBUG)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -14,6 +14,8 @@
   --bg:#eef2ff;
   --card:#fff;
   --text:#0f172a;
+  --logbg:#0f172a;
+  --logtext:#e5e7eb;
 }
 *{box-sizing:border-box}
 body{
@@ -23,23 +25,42 @@ body{
   font-family:Inter,Arial,sans-serif;
   color:var(--text);
 }
+.wrapper{
+  display:grid;
+  grid-template-columns:1fr 420px;
+  gap:16px;
+}
 .container{
-  max-width:1100px;
-  margin:auto;
   background:#fff;
   border-radius:30px;
   padding:30px;
   box-shadow:0 35px 80px rgba(0,0,0,.12);
-  position:relative;
 }
-h1,h3{margin:0;font-weight:800}
-h1{margin-bottom:18px}
-h3{margin:26px 0 12px}
-label{font-size:13px;font-weight:800;margin-top:16px;display:block}
+.log{
+  background:var(--logbg);
+  color:var(--logtext);
+  border-radius:20px;
+  padding:14px;
+  font-family:monospace;
+  font-size:12px;
+  overflow:auto;
+  max-height:92vh;
+}
+.log h3{
+  margin:0 0 10px;
+  font-size:14px;
+  color:#60a5fa;
+}
+.log pre{
+  white-space:pre-wrap;
+  margin:0 0 12px;
+  border-bottom:1px dashed #334155;
+  padding-bottom:8px;
+}
 input,select,button{
   width:100%;
-  padding:14px 16px;
-  border-radius:18px;
+  padding:14px;
+  border-radius:14px;
   border:1px solid #cbd5e1;
   margin-top:6px;
 }
@@ -48,460 +69,138 @@ button{
   color:#fff;
   font-weight:800;
   border:none;
-  cursor:pointer;
-}
-.secondary{
-  background:#e5e7eb;
-  color:#111827;
 }
 .lista .item{
   background:#f1f5f9;
-  padding:14px;
-  border-radius:16px;
-  margin-top:6px;
+  padding:10px;
+  border-radius:12px;
+  margin-top:4px;
   cursor:pointer;
 }
-.lista .item:hover{background:#e2e8f0}
 .badge{
   display:inline-block;
-  margin-top:10px;
-  padding:8px 16px;
+  padding:6px 12px;
   border-radius:999px;
   background:#e0f2fe;
   font-weight:800;
   font-size:12px;
-}
-.grid{
-  display:grid;
-  grid-template-columns:2fr 1fr 1fr 1fr auto;
-  gap:8px;
-}
-.ing{
-  background:#f8fafc;
-  border-radius:14px;
-  padding:12px 16px;
-  margin-top:6px;
-  display:flex;
-  justify-content:space-between;
-}
-.kpis{
-  display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:14px;
-  margin-top:26px;
-}
-.kpi{
-  background:#f8fafc;
-  border-radius:20px;
-  padding:18px;
-  text-align:center;
-  font-weight:800;
-}
-.kpi span{display:block;margin-top:6px;font-size:18px}
-.preview{
-  width:100%;
-  max-height:220px;
-  object-fit:cover;
-  border-radius:20px;
-  margin-top:12px;
-}
-.overlay{
-  position:absolute;
-  inset:0;
-  background:rgba(255,255,255,.85);
-  backdrop-filter:blur(3px);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:30;
-  border-radius:30px;
-}
-.overlay span{
-  font-size:18px;
-  font-weight:800;
-  color:#2563eb;
-}
-.hidden{display:none}
-.topbar{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-.logout{
-  background:#ef4444;
-}
-.auth-box{
-  max-width:420px;
-  margin:auto;
-}
-.toggle{
-  text-align:center;
-  margin-top:14px;
-  font-weight:700;
-  cursor:pointer;
-  color:#2563eb;
+  margin-top:8px;
 }
 </style>
 </head>
 
 <body>
-<div class="container">
 
-<div id="overlay" class="overlay"><span>Carregando…</span></div>
-
-<!-- AUTH -->
-<div id="authBox" class="auth-box">
-  <h1 id="authTitle">🔐 Entrar</h1>
-
-  <label>Email</label>
-  <input id="authEmail" type="email" placeholder="email@empresa.com">
-
-  <label>Senha</label>
-  <input id="authSenha" type="password" placeholder="••••••••">
-
-  <button id="authBtn" onclick="login()">Entrar</button>
-
-  <div class="toggle" onclick="toggleAuth()">
-    Criar nova conta
-  </div>
-</div>
+<div class="wrapper">
 
 <!-- APP -->
-<div id="app" class="hidden">
+<div class="container">
 
-<div class="topbar">
-  <h1>📋 Ficha Técnica</h1>
-  <button class="logout" onclick="logout()">Sair</button>
-</div>
+<h1>📋 Ficha Técnica (DEBUG)</h1>
 
 <label>Produto (prato)</label>
 <input id="buscaProduto" placeholder="Digite o nome do produto">
 <div id="listaProduto" class="lista"></div>
 <div id="produtoBadge" class="badge" style="display:none"></div>
 
-<label>Foto do prato</label>
-<input type="file" id="fotoProduto" accept="image/*">
-<img id="previewFoto" class="preview" style="display:none">
-
-<h3>🍳 Ingredientes</h3>
-
-<label>Buscar ingrediente</label>
-<input id="buscaIngrediente" placeholder="Digite o nome do ingrediente">
-<div id="listaIngrediente" class="lista"></div>
-<div id="ingredienteBadge" class="badge" style="display:none"></div>
-
-<div class="grid">
-  <input id="qtd" type="number" step="0.001" placeholder="Qtd usada">
-  <select id="unUso">
-    <option>UN</option><option>KG</option><option>G</option>
-    <option>L</option><option>ML</option>
-  </select>
-  <input id="custo" readonly placeholder="Custo unit">
-  <input id="rend" type="number" placeholder="Rend %">
-  <button onclick="addIngrediente()">+</button>
-</div>
-
-<div id="listaIng"></div>
-
-<label>Rendimento final (porções)</label>
-<input id="rendimentoFinal" type="number" value="1" min="1" oninput="render()">
-
-<div class="kpis">
-  <div class="kpi">CMV Total<span id="cmvTotal">R$ 0,00</span></div>
-  <div class="kpi">CMV Unit<span id="cmvUnit">R$ 0,00</span></div>
-  <div class="kpi">Preço Venda<span id="precoVenda">—</span></div>
-  <div class="kpi">Margem<span id="margem">—</span></div>
-</div>
-
-<button onclick="salvar()" style="margin-top:28px">
-  Salvar Ficha Técnica
-</button>
+<label>Preço Venda</label>
+<input id="precoVenda" readonly>
 
 </div>
+
+<!-- LOG -->
+<div class="log">
+  <h3>🧠 LOG EM TEMPO REAL</h3>
+  <div id="logArea"></div>
+</div>
+
 </div>
 
 <script>
-/* ================= SUPABASE ================= */
-const sb = supabase.createClient(
-  "https://dxkszikemntfusfyrzos.supabase.co",
-  "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
-);
+/* ================= LOG ================= */
+const logArea = document.getElementById("logArea");
 
-const overlay = document.getElementById("overlay");
-const show = () => overlay.style.display = "flex";
-const hide = () => overlay.style.display = "none";
-
-/* ================= AUTH ================= */
-let isSignup=false;
-
-function toggleAuth(){
-  isSignup=!isSignup;
-  authTitle.textContent=isSignup?"🆕 Criar Conta":"🔐 Entrar";
-  authBtn.textContent=isSignup?"Criar Conta":"Entrar";
+function log(titulo, obj){
+  const time = new Date().toLocaleTimeString();
+  const pre = document.createElement("pre");
+  pre.innerText =
+`[${time}] ${titulo}
+${obj ? JSON.stringify(obj,null,2) : ""}`;
+  logArea.prepend(pre);
 }
 
-async function login(){
-  show();
-  let res;
-  if(isSignup){
-    res = await sb.auth.signUp({
-      email: authEmail.value,
-      password: authSenha.value
-    });
-  }else{
-    res = await sb.auth.signInWithPassword({
-      email: authEmail.value,
-      password: authSenha.value
-    });
-  }
-  hide();
-
-  if(res.error){
-    alert(res.error.message);
-    return;
-  }
-
-  if(isSignup){
-    alert("Conta criada com sucesso! Você já pode entrar.");
-    toggleAuth();
-    return;
-  }
-
-  init();
-}
-
-async function logout(){
-  await sb.auth.signOut();
-  location.reload();
-}
-
-async function init(){
-  const { data } = await sb.auth.getSession();
-  if(data.session){
-    authBox.classList.add("hidden");
-    app.classList.remove("hidden");
-  }else{
-    authBox.classList.remove("hidden");
-    app.classList.add("hidden");
-  }
-}
-init();
-
-async function getUserId(){
-  const { data } = await sb.auth.getSession();
-  return data.session.user.id;
-}
-
-/* ================= LÓGICA FICHA ================= */
-let produto=null;
-
-let ingrediente=null;
-let ingredientes=[];
+/* ================= BUSCA PRODUTO ================= */
 let debounce=null;
 
-const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
-
-/* FOTO */
-fotoProduto.onchange=()=>{
-  const f=fotoProduto.files[0];
-  if(!f)return;
-  previewFoto.src=URL.createObjectURL(f);
-  previewFoto.style.display="block";
-};
-
-/* BUSCA PRODUTO */
 buscaProduto.oninput=()=>{
   clearTimeout(debounce);
-  const termo=buscaProduto.value.trim();
-  if(termo.length<3){ listaProduto.innerHTML=""; return; }
+  const termo = buscaProduto.value.trim();
 
-  debounce=setTimeout(async()=>{
-    const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(termo)}`);
-    const j=await r.json();
-    listaProduto.innerHTML=j.items.map(p=>`
-      <div class="item"
-        onclick="selectProduto(${p.id},'${p.descricao.replace(/'/g,"")}')">
-        ${p.descricao}
-      </div>`).join("");
-  },300);
-};
+  log("⌨️ Digitado no campo de produto", { termo });
 
-async function selectProduto(id, nome){
-  show();
-
-  const r = await fetch(`/api/produto-preco/${id}`);
-  const p = await r.json(); // 👈 objeto direto
-
-  const preco =
-    Number(p.precoOferta1) ||
-    Number(p.precoVenda1) ||
-    Number(p.precoVenda2) ||
-    Number(p.precoVenda3) ||
-    0;
-
-  produto = {
-    id,
-    nome,
-    preco
-  };
-
-  produtoBadge.style.display = "inline-block";
-  produtoBadge.textContent = `${nome} • ${moeda(preco)}`;
-  precoVenda.textContent = moeda(preco);
-
-  listaProduto.innerHTML = "";
-  hide();
-  render();
-}
-
-
-
-/* INGREDIENTE */
-buscaIngrediente.oninput=()=>{
-  clearTimeout(debounce);
-  const termo=buscaIngrediente.value.trim();
-  if(termo.length<3){ listaIngrediente.innerHTML=""; return; }
-
-  debounce=setTimeout(async()=>{
-    const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(termo)}`);
-    const j=await r.json();
-    listaIngrediente.innerHTML=j.items.map(p=>`
-      <div class="item"
-        onclick="selectIng(${p.id},'${p.descricao.replace(/'/g,"")}')">
-        ${p.descricao}
-      </div>`).join("");
-  },300);
-};
-
-async function selectIng(id, nome){
-  show();
-
-  const r = await fetch(`/api/produto-preco/${id}`);
-  const p = await r.json(); // 👈 objeto direto
-
-  const custo = Number(p.precoMedioDeReposicao) || 0;
-
-  ingrediente = {
-    id,
-    nome,
-    custo
-  };
-
-  ingredienteBadge.style.display = "inline-block";
-  ingredienteBadge.textContent = nome;
-  custo.value = custo.toFixed(4);
-
-  listaIngrediente.innerHTML = "";
-  hide();
-}
-
-function addIngrediente(){
-  if(!ingrediente||!qtd.value)return;
-  const rendimento=(rend.value||100)/100;
-const total=(qtd.value*ingrediente.custo)/rendimento;
-  ingredientes.push({
-    nome:ingrediente.nome,
-    quantidade:Number(qtd.value),
-    unidade:unUso.value,
-    custo_unitario:ingrediente.custo,
-    custo_total:total,
-    rendimento_percentual:rend.value||100
-  });
-
-  qtd.value=""; rend.value="";
-  ingrediente=null;
-  ingredienteBadge.style.display="none";
-  render();
-}
-
-function render(){
-  const cmv=ingredientes.reduce((s,i)=>s+i.custo_total,0);
-  listaIng.innerHTML=ingredientes.map(i=>`
-    <div class="ing">
-      <span>${i.nome} (${i.quantidade} ${i.unidade})</span>
-      <strong>${moeda(i.custo_total)}</strong>
-    </div>`).join("");
-
-  const porcoes=rendimentoFinal.value||1;
-  cmvTotal.textContent=moeda(cmv);
-  cmvUnit.textContent=moeda(cmv/porcoes);
-  margem.textContent=produto?.preco
-    ?(((produto.preco-(cmv/porcoes))/produto.preco)*100).toFixed(1)+"%"
-    :"—";
-}
-
-async function salvar(){
-  if(!produto||!ingredientes.length){
-    alert("Produto e ingredientes são obrigatórios");
+  if(termo.length < 3){
+    listaProduto.innerHTML="";
     return;
   }
 
-  show();
+  debounce=setTimeout(async()=>{
+    const url = `/api/produtos-busca?q=${encodeURIComponent(termo)}`;
+    log("📡 Chamando API de busca", { url });
 
-  let fotoUrl=null;
-  if(fotoProduto.files[0]){
-    const file=fotoProduto.files[0];
-    const safeName=file.name
-      .normalize("NFD").replace(/[\u0300-\u036f]/g,"")
-      .replace(/[^a-zA-Z0-9._-]/g,"_");
+    const r = await fetch(url);
+    const j = await r.json();
 
-    const path=`fichas/${Date.now()}-${safeName}`;
+    log("📦 Retorno da busca", j);
 
-    const up=await sb.storage.from("buffet")
-      .upload(path,file,{contentType:file.type});
+    listaProduto.innerHTML = (j.items||[]).map(p=>`
+      <div class="item"
+        onclick="selectProduto(${p.id}, '${p.descricao.replace(/'/g,"")}')">
+        ${p.descricao}
+      </div>
+    `).join("");
+  },300);
+};
 
-    if(up.error){ hide(); alert("Erro imagem"); return; }
+/* ================= SELECIONAR PRODUTO ================= */
+async function selectProduto(id, nome){
+  log("🖱️ Produto selecionado", { id, nome });
 
-    fotoUrl=sb.storage.from("buffet")
-      .getPublicUrl(path).data.publicUrl;
-  }
+  const url = `/api/produto-preco/${id}`;
+  log("📡 Chamando API de preço", { url });
 
-  const cmv=ingredientes.reduce((s,i)=>s+i.custo_total,0);
-  const porcoes=rendimentoFinal.value||1;
+  const r = await fetch(url);
+  const p = await r.json();
 
- const userId = await getUserId();
+  log("📦 JSON bruto do preço", p);
 
-const { data, error } = await sb
-  .from("buffet")
-  .insert({
-    user_id: userId,
-    produto_id: produto.id,
-    nome: produto.nome,
-    preco_venda: produto.preco,
-    custo_total: cmv,
-    custo_unitario: cmv / porcoes,
-    margem_percentual: produto.preco
-      ? ((produto.preco - (cmv / porcoes)) / produto.preco) * 100
-      : null,
-    rendimento: porcoes,
-    foto_url: fotoUrl
-  })
-  .select()
-  .single();
+  const precoOferta = Number(p.precoOferta1);
+  const preco1 = Number(p.precoVenda1);
+  const preco2 = Number(p.precoVenda2);
+  const preco3 = Number(p.precoVenda3);
 
-if(error){
-  console.error(error);
-  hide();
-  alert(error.message);
-  return;
-}
+  log("🔎 Campos avaliados", {
+    precoOferta1: precoOferta,
+    precoVenda1: preco1,
+    precoVenda2: preco2,
+    precoVenda3: preco3
+  });
 
-  for(const i of ingredientes){
-    await sb.from("buffet_itens").insert({
-      buffet_id:data.id,
-      nome:i.nome,
-      unidade_uso:i.unidade,
-      quantidade:i.quantidade,
-      custo_unitario:i.custo_unitario,
-      custo_calculado:i.custo_total,
-      rendimento_percentual:i.rendimento_percentual
-    });
-  }
+  const precoFinal =
+    precoOferta ||
+    preco1 ||
+    preco2 ||
+    preco3 ||
+    0;
 
-  hide();
-  alert("Ficha técnica salva com sucesso!");
-  location.reload();
+  log("💰 Preço final calculado", { precoFinal });
+
+  produtoBadge.style.display="inline-block";
+  produtoBadge.textContent = `${nome} • R$ ${precoFinal.toFixed(2)}`;
+  precoVenda.value = `R$ ${precoFinal.toFixed(2)}`;
+
+  listaProduto.innerHTML="";
 }
 </script>
+
 </body>
 </html>
