--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -297,9 +297,15 @@ let produto=null;
 
 let ingrediente=null;
 let ingredientes=[];
-let debounce=null;
-let searchController = null;
-const searchCache = {};
+let debounceProduto = null;
+let debounceIngrediente = null;
+
+let controllerProduto = null;
+let controllerIngrediente = null;
+
+const cacheProduto = {};
+const cacheIngrediente = {};
+
 
 const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 
@@ -313,7 +319,8 @@ fotoProduto.onchange=()=>{
 
 /* BUSCA PRODUTO */
 buscaProduto.oninput = () => {
-  clearTimeout(debounce);
+  clearTimeout(debounceProduto);
+
   const termo = buscaProduto.value.trim().toLowerCase();
 
   if (termo.length < 2) {
@@ -321,37 +328,35 @@ buscaProduto.oninput = () => {
     return;
   }
 
-  debounce = setTimeout(async () => {
+  debounceProduto = setTimeout(async () => {
 
-    // cache local
-    if (searchCache[termo]) {
-      renderListaProduto(searchCache[termo]);
+    if (cacheProduto[termo]) {
+      renderListaProduto(cacheProduto[termo]);
       return;
     }
 
-    // cancela request anterior
-    if (searchController) {
-      searchController.abort();
+    if (controllerProduto) {
+      controllerProduto.abort();
     }
 
-    searchController = new AbortController();
+    controllerProduto = new AbortController();
 
     try {
       const r = await fetch(
         `/api/produtos-busca?q=${encodeURIComponent(termo)}`,
-        { signal: searchController.signal }
+        { signal: controllerProduto.signal }
       );
 
       const j = await r.json();
-      searchCache[termo] = j.items || [];
-
+      cacheProduto[termo] = j.items || [];
       renderListaProduto(j.items || []);
     } catch (e) {
       if (e.name !== "AbortError") {
         console.error(e);
       }
     }
-  }, 120); // 🔥 muito mais rápido
+
+  }, 120);
 };
 
 function renderListaProduto(items) {
@@ -444,7 +449,8 @@ document.getElementById("custo").value = custoUnitario.toFixed(4);
 
 /* INGREDIENTE */
 buscaIngrediente.oninput = () => {
-  clearTimeout(debounce);
+  clearTimeout(debounceIngrediente);
+
   const termo = buscaIngrediente.value.trim().toLowerCase();
 
   if (termo.length < 2) {
@@ -452,34 +458,34 @@ buscaIngrediente.oninput = () => {
     return;
   }
 
-  debounce = setTimeout(async () => {
+  debounceIngrediente = setTimeout(async () => {
 
-    if (searchCache[termo]) {
-      renderListaIngrediente(searchCache[termo]);
+    if (cacheIngrediente[termo]) {
+      renderListaIngrediente(cacheIngrediente[termo]);
       return;
     }
 
-    if (searchController) {
-      searchController.abort();
+    if (controllerIngrediente) {
+      controllerIngrediente.abort();
     }
 
-    searchController = new AbortController();
+    controllerIngrediente = new AbortController();
 
     try {
       const r = await fetch(
         `/api/produtos-busca?q=${encodeURIComponent(termo)}`,
-        { signal: searchController.signal }
+        { signal: controllerIngrediente.signal }
       );
 
       const j = await r.json();
-      searchCache[termo] = j.items || [];
-
+      cacheIngrediente[termo] = j.items || [];
       renderListaIngrediente(j.items || []);
     } catch (e) {
       if (e.name !== "AbortError") {
         console.error(e);
       }
     }
+
   }, 120);
 };
 
