--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -129,7 +129,13 @@ button{
 }
 .logout{
   background:#ef4444;
+  padding:8px 14px;      /* 🔽 menor */
+  font-size:12px;       /* 🔽 texto menor */
+  border-radius:12px;   /* 🔽 mais compacto */
+  width:auto;           /* 🔽 não ocupa largura toda */
+  margin-top:0;
 }
+
 .auth-box{
   max-width:420px;
   margin:auto;
