--- a/analiseficha.html
+++ b/analiseficha.html
@@ -23,12 +23,35 @@ body{
   background:var(--bg);
   font-family:Inter,Arial,sans-serif;
 }
-h1{margin:0 0 24px;font-weight:800}
+
+/* TOPO */
+.topbar{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:24px;
+}
+.logout{
+  background:var(--danger);
+  padding:8px 14px;
+  font-size:12px;
+  border-radius:12px;
+  color:#fff;
+  font-weight:800;
+  border:none;
+  cursor:pointer;
+  width:auto;
+}
+
+/* GRID */
+h1{margin:0;font-weight:800}
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(340px,1fr));
   gap:22px;
 }
+
+/* CARD */
 .card{
   background:var(--card);
   border-radius:26px;
@@ -40,9 +63,7 @@ h1{margin:0 0 24px;font-weight:800}
   height:200px;
   object-fit:cover;
 }
-.body{
-  padding:20px;
-}
+.body{padding:20px}
 .title{font-size:18px;font-weight:800}
 .badge{
   background:#e0f2fe;
@@ -71,15 +92,17 @@ h1{margin:0 0 24px;font-weight:800}
   display:flex;
   justify-content:space-between;
 }
-button{
+button.edit{
   width:100%;
   padding:14px;
   border-radius:18px;
   border:none;
   font-weight:800;
   cursor:pointer;
+  background:linear-gradient(180deg,#2563eb,#1e40af);
+  color:#fff;
+  margin-top:12px;
 }
-.edit{background:linear-gradient(180deg,#2563eb,#1e40af);color:#fff}
 
 /* MODAL */
 .modal{
@@ -106,12 +129,22 @@ button{
   gap:8px;
   margin-top:8px;
 }
+input{
+  padding:12px;
+  border-radius:14px;
+  border:1px solid #cbd5e1;
+  width:100%;
+}
 </style>
 </head>
 
 <body>
 
-<h1>📊 Fichas Técnicas</h1>
+<div class="topbar">
+  <h1>📊 Fichas Técnicas</h1>
+  <button class="logout" onclick="logout()">Sair</button>
+</div>
+
 <div id="cards" class="grid"></div>
 
 <div id="modal" class="modal">
@@ -121,7 +154,7 @@ button{
     <label>Nome do prato</label>
     <input id="editNome">
 
-    <h3 style="margin-top:16px">Ingredientes (valores atualizados do Varejo)</h3>
+    <h3 style="margin-top:16px">Ingredientes (valores atualizados)</h3>
     <div id="listaEdit"></div>
 
     <div class="kpis">
@@ -144,6 +177,12 @@ const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:
 
 let ficha=null;
 let itens=[];
+
+/* LOGOUT REAL */
+async function logout(){
+  await sb.auth.signOut();
+  location.reload();
+}
 
 /* LOAD */
 (async()=>{
@@ -175,21 +214,10 @@ function renderCard(f,it){
   cards.appendChild(c);
 }
 
-/* EDITAR COM VAREJO */
+/* EDITAR */
 async function editar(id){
   ficha = (await sb.from("buffet").select("*").eq("id",id).single()).data;
   itens = (await sb.from("buffet_itens").select("*").eq("buffet_id",id)).data;
-
-  // 🔥 RECONSULTA PREÇO DO PRODUTO NO VAREJO
-  const p = await (await fetch(`/api/produto-preco/${ficha.produto_id}`)).json();
-  ficha.preco_venda = p.precoOferta1 ?? p.precoVenda1 ?? 0;
-
-  // 🔥 RECONSULTA CUSTO DOS INGREDIENTES
-  for(const i of itens){
-    const r = await (await fetch(`/api/produto-preco/${i.produto_id}`)).json();
-    i.custo_unitario = r.precoMedioDeReposicao ?? 0;
-    i.custo_calculado = (i.quantidade * i.custo_unitario) / (i.rendimento_percentual/100);
-  }
 
   editTitulo.textContent=ficha.nome;
   editNome.value=ficha.nome;
@@ -202,7 +230,7 @@ function renderEdit(){
   listaEdit.innerHTML=itens.map(i=>`
     <div class="ing-edit">
       <input value="${i.nome}" disabled>
-      <input value="${i.quantidade}">
+      <input value="${i.quantidade}" disabled>
       <input value="${moeda(i.custo_calculado)}" disabled>
     </div>
   `).join("");
@@ -216,12 +244,14 @@ function renderEdit(){
 }
 
 async function salvar(){
+  const total = itens.reduce((s,i)=>s+i.custo_calculado,0);
+  const unit = total / ficha.rendimento;
+
   await sb.from("buffet").update({
     nome:editNome.value,
-    preco_venda:ficha.preco_venda,
-    custo_total:itens.reduce((s,i)=>s+i.custo_calculado,0),
-    custo_unitario:(itens.reduce((s,i)=>s+i.custo_calculado,0)/ficha.rendimento),
-    margem_percentual:(((ficha.preco_venda-(itens.reduce((s,i)=>s+i.custo_calculado,0)/ficha.rendimento))/ficha.preco_venda)*100)
+    custo_total:total,
+    custo_unitario:unit,
+    margem_percentual:((ficha.preco_venda-unit)/ficha.preco_venda)*100
   }).eq("id",ficha.id);
 
   modal.style.display="none";
